--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -705,6 +705,7 @@
                     <connections>
                         <outlet property="tableView" destination="Q7h-BZ-JiC" id="PB5-Ae-jKB"/>
                         <segue destination="Dpo-m9-qJw" kind="presentation" identifier="settingsSegue" id="v49-Pu-UoE"/>
+                        <segue destination="YQ8-FI-02z" kind="presentation" identifier="addTournamentSegue" id="7O7-fg-u8I"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UXK-i7-pR8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -741,22 +742,29 @@
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="KSc-fx-13H"/>
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="1iq-6q-cEF">
                         <barButtonItem key="leftBarButtonItem" image="menu" id="sJa-z9-bgR">
                             <connections>
-                                <action selector="menuBtnPressed:" destination="fss-gm-LwY" id="tUi-TH-q6D"/>
+                                <action selector="menuBtnPressedWithSender:" destination="fss-gm-LwY" id="4B8-RF-a3x"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="changePictureBtn" destination="pWK-gB-nyD" id="Tqh-B8-lgV"/>
                         <outlet property="userProfileImg" destination="YN2-DA-fLe" id="yfy-sm-RzD"/>
-                        <segue destination="28v-gz-Ddt" kind="presentation" identifier="showMenu" id="TYE-uG-05q"/>
+                        <segue destination="28v-gz-Ddt" kind="presentation" identifier="openMenu" id="TYE-uG-05q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="neo-g5-UYi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <screenEdgePanGestureRecognizer minimumNumberOfTouches="1" id="F3A-mx-LeI">
+                    <rectEdge key="edges" left="YES"/>
+                    <connections>
+                        <action selector="edgePanGestureWithSender:" destination="fss-gm-LwY" id="Nfq-Zy-uqp"/>
+                    </connections>
+                </screenEdgePanGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="5980" y="-174.06296851574214"/>
         </scene>
@@ -855,7 +863,7 @@
                         <viewLayoutGuide key="safeArea" id="0us-RO-kBy"/>
                     </view>
                     <navigationItem key="navigationItem" title="Tournament" id="1gU-Um-ulg">
-                        <barButtonItem key="leftBarButtonItem" image="menu" id="WMp-wt-ccE"/>
+                        <barButtonItem key="leftBarButtonItem" image="menu" id="hKI-En-Jv9"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AeK-Df-o0V" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -876,6 +884,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ujL-IP-XsX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4188" y="779"/>
+        </scene>
+        <!--Add A Tournament-->
+        <scene sceneID="8jp-bQ-pUb">
+            <objects>
+                <viewController id="xg4-3c-m1D" customClass="AddTournamentViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dVj-jt-uNV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1N6-1k-aRk">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Add Tournament Screen" translatesAutoresizingMaskIntoConstraints="NO" id="gu6-IK-z7Y">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="IX0-iA-1k8"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add A Tournament" id="6A1-LB-uZL">
+                        <barButtonItem key="leftBarButtonItem" image="menu" id="ycP-bZ-hxw"/>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="28v-gz-Ddt" kind="presentation" identifier="openMenu" id="bgd-bn-Rbp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1iG-U0-QiV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5980" y="580.65967016491754"/>
         </scene>
         <!--Item-->
         <scene sceneID="Q0w-Eh-l8m">
@@ -973,8 +1015,27 @@
             </objects>
             <point key="canvasLocation" x="5040.8000000000002" y="-174.06296851574214"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZhR-Mi-aYa">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YQ8-FI-02z" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="C6a-Gr-B3V">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xg4-3c-m1D" kind="relationship" relationship="rootViewController" id="bnP-DL-RJk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sgE-P8-wsk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5041" y="581"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="Add Tournament Screen" width="375" height="667"/>
         <image name="AddPhotoBtn" width="110" height="100"/>
         <image name="Back Arrow" width="30" height="30"/>
         <image name="ChangePictureBtn" width="217" height="40"/>
@@ -1011,7 +1072,8 @@
         <image name="xbox" width="60" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="7O7-fg-u8I"/>
         <segue reference="p1K-8C-PN8"/>
-        <segue reference="TYE-uG-05q"/>
+        <segue reference="bgd-bn-Rbp"/>
     </inferredMetricsTieBreakers>
 </document>
